2008-10-01  Tor Lillqvist  <tml@novell.com>

	* gtk/gtkscalebutton.c: Don't #define _GNU_SOURCE on Windows as it
	confuses newest mingw headers.

2008-10-01  Tor Lillqvist  <tml@novell.com>

	* gdk/win32/gdkkeys-win32.c (gdk_keymap_get_caps_lock_state):
	Implement trivially on Windows. Not sure if something more complex
	is actually needed, more specifically whether the function needs
	to differentiate between "Caps Lock" and "Shift Lock" semantics?

2008-10-01  Simos Xenitellis  <simos@gnome.org>

	Bug 554506 – combining diacritics broken, became deadkeys

	* gtk/gtkimcontextsimple.c: added check if keysym is greater
	than 0x1000000, in this case it is not a dead key.

2008-09-30  Michael Natterer  <mitch@imendio.com>

	Bug 553582 – Add orientation API to GtkSeparator

	* gtk/gtkseparator.[ch]: implement the GtkOrientable interface and
	swallow all code from GtkHSeparator and GtkVSeparator. Add
	gtk_separator_new() which takes a GtkOrientation argument.

	* gtk/gtkhseparator.c
	* gtk/gtkvseparator.c: remove all code except the constructor and
	call gtk_orientable_set_orientation() in init().

	* gtk/gtk.symbols: add gtk_separator_new().

2008-09-30  Marek Kasik  <mkasik@redhat.com>

	Bug 344522 – support non-local destination files (GtkPrint):

	* gtk/gtkprintunixdialog.c
	* gtk/gtkprinteroptionwidget.c: Process URI instead of filename.
	* modules/printbackends/file/gtkprintbackendfile.c: Add ability
	to save files on non-local filesystems.

2008-09-30  Michael Natterer  <mitch@imendio.com>

	* gtk/gtk.symbols: forgot the G_GNUC_CONST of
	gtk_orientable_get_type().

2008-09-30  Michael Natterer  <mitch@imendio.com>

	Bug 541009 – Get rid of separate subclasses for horizontal and
	vertical orientation:

	* gtk/Makefile.am
	* gtk/gtk.symbols
	* gtk/gtk.h
	* gtk/gtkorientable.[ch]: add new interface GtkOrientable which
	will be implemented by everything that can switch orientation.

2008-09-30  Christian Dywan  <christian@imendio.com>

	Fix a typo in the tutorial.
