@@ -5850,6 +5850,7 @@ gtk_selection_data_targets_include_image
 gtk_selection_data_targets_include_text
 gtk_selection_data_targets_include_uri
 gtk_selection_data_targets_include_rich_text
+gtk_selection_data_get_selection
 gtk_selection_data_get_data
 gtk_selection_data_get_length
 gtk_selection_data_get_data_type
